--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </button>
                 </div>
                 <!-- Section : Drop-down menu -->
-                <div class="bg-white space-y-1 px-2 pb-3 pt-2 shadow-lg lg:flex lg:items-center lg:bg-[#9C9BD2] lg:shadow-none">
+                <div id="options-menu" class="hidden bg-white space-y-1 px-2 pb-3 pt-2 shadow-lg lg:flex lg:items-center lg:bg-[#9C9BD2] lg:shadow-none">
                     <a
                     id="balance-btn"
                     href="#"
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <!-- Section - Information new operation -->
-                <div id="new-operation" class="mt-4">
+                <div id="new-operation" class="hidden mt-4">
                     <table id="table" class="w-full table-fixed border border-purple-100 flex-wrap">
                         <thead >
                             <tr class="hidden border border-purple-100 md:flex md:justify-between">
@@ -165,8 +165,8 @@
         <!-- Card - New operation / Edit Operation -->
         <div id="operations-form" class="hidden lg:my-20">
             <form class="flex-col mx-6 mt-20 p-4 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:m-auto lg:px-10 lg:pt-5">
-                <h2 class= "pt-6 pb-10 ml-3 text-4xl font-bold">Nueva Operación</h2>
-                <h2 class= "hidden pt-6 pb-10 ml-3 text-4xl font-bold">Editar Operación</h2>
+                <h2 class="new-operation-title pt-6 pb-10 ml-3 text-4xl font-bold">Nueva Operación</h2>
+                <h2 class="edit-operation-title hidden pt-6 pb-10 ml-3 text-4xl font-bold">Editar Operación</h2>
                 <section class="flex flex-wrap">
                     <label class="font-bold w-full px-4 pt-6 pb-2">Descripción</label>
                     <input type="text" id="description" name="description" class="w-full border border-2 border-[#ebebeb] p-2 ml-3 rounded-lg hover:border-neutral-300 focus:outline-none focus:border focus:border-2 focus:border-purple-300 ">
