--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
         </nav>
     </header>
     <main>
+        <!--Succesfull alert-->
+        <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="alert">
+            <strong class="font-bold">¡Increíble!</strong>
+            <span class="block sm:inline">Su elección ha sido agregada satisfactoriamente.</span>
+            <span role="button" class="absolute top-0 bottom-0 right-0 px-4 py-3">
+               <i class="fa-solid fa-xmark fill-current h-6 w-6 text-green-500"></i>
+            </span>
+        </div>
         <!-- Section - Balance -->
         <section id="balance-section" class="lg:flex lg:justify-center lg:align-start">
             <div id="balance-card-left" class="lg:w-1/4">
@@ -205,7 +213,8 @@
                     <button id="btn-add-categories" class="px-4 py-2 rounded-md bg-purple-500 text-white hover:bg-purple-700 lg:w-[10%]">Agregar</button>
                 </section>
                 <div id="categories-section" class="flex flex-col text-md">
-                    <!--Operations rendered from the localstorage -->
+                    <!--Categories rendered from the localstorage -->
+                </div>    
             </div>
         </section>
         <!--Card - Edit categories-->
@@ -324,6 +333,7 @@
                 </div>
             </div>
         </div>
+        
     </main>
     <script src="./js/main.js"></script>
 </body>
