adding delete operations with modal window and modifying render operation function

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </form>
         </div>
         <!-- Section - Categories -->
-        <section id="categorie-section" class="my-20">
+        <section id="categorie-section" class="hidden my-20">
             <div class= "flex-col mx-6 mt-20 p-4 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:m-auto lg:px-10 lg:pt-5">
                 <h2 class= "pt-6 pb-10 ml-3 text-4xl font-bold">Categorías</h2>
                 <section class="flex flex-wrap justify-between w-full align-center">
@@ -229,7 +229,7 @@
             </form>
         </section>
         <!--Section - Reports-->
-        <section id="reports-section" class= "my-20">
+        <section id="reports-section" class="hidden my-20">
             <div class="flex-col mx-6 mt-20 p-4 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:m-auto lg:px-10 lg:pt-5">
                 <h2 class= "pt-6 pb-10 ml-3 text-4xl font-bold">Reportes</h2>
                 <div class="hidden">
@@ -319,7 +319,7 @@
                                     <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
                                         <h3 class="text-base font-semibold leading-6 text-gray-900" id="modal-title">Eliminar</h3>
                                         <div class="mt-2">
-                                            <p class="text-sm text-gray-500">¿Estás segura de querer eliminar <span>"Nueva Operación"</span>? Toda la información será removida de forma permanente. Esta acción no podrá deshacerse.</p>
+                                            <p class="text-sm text-gray-500">¿Estás seguro de querer eliminar "<span class="modal-text text-red-600 font-bold"></span>"? Toda la información será removida de forma permanente. Esta acción no podrá deshacerse.</p>
                                         </div>    
                                     </div>
                                 </div>
