--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     ></i><i class="fa-solid fa-chart-line"></i> Balance</a
                     >
                     <a
-                    id="categorie-btn"
+                    id="category-btn"
                     href="#"
                     class="block mt-1 px-3 py-2 rounded-md text-gray-900 text-base font-medium active:bg-[#fbfbfb] active:text-purple-500 hover:bg-[#fbfbfb] hover:text-purple-500 lg:mr-2 lg:p4 lg:text-white lg:text-lg"
                     ><i class="fa-solid fa-tag"></i> Categorias</a
@@ -81,7 +81,9 @@
                     </div>
                     <div class="flex justify-between py-2 text-gray-900">
                         <div class="text-2xl">Total</div>
-                        <div>$<span id="total-balance">0</span></div>
+                        <div id="total-balance">
+                            <!--total rendered in JS-->
+                        </div>
                     </div>
                 </div>
                 <!-- Card - Filters -->
@@ -189,7 +191,7 @@
                 </section>
                 <section class="flex flex-wrap">
                     <label for="catogorie" class="font-bold w-full px-4 pt-6 pb-2">Categoría</label>
-                    <select name="categorie" id="categorie" class="w-full border border-2 border-[#ebebeb] p-2 ml-3 rounded-lg hover:border-neutral-300 focus:outline-none focus:border focus:border-2 focus:border-purple-300">
+                    <select name="category" id="category" class="w-full border border-2 border-[#ebebeb] p-2 ml-3 rounded-lg hover:border-neutral-300 focus:outline-none focus:border focus:border-2 focus:border-purple-300">
                        <!--Operations rendered from the localstorage -->
                     </select>
                 </section>
@@ -206,7 +208,7 @@
             </form>
         </div>
         <!-- Section - Categories -->
-        <section id="categorie-section" class="hidden my-20">
+        <section id="category-section" class="hidden my-20">
             <div class= "flex-col mx-6 mt-20 p-4 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:m-auto lg:px-10 lg:pt-5">
                 <h2 class= "pt-6 pb-10 ml-3 text-4xl font-bold">Categorías</h2>
                 <section class="flex flex-wrap justify-between w-full align-center">
@@ -231,30 +233,30 @@
             </form>
         </section>
         <!--Section - Reports-->
-        <section id="reports-section" class="hidden my-20">
-            <div class="flex-col mx-6 mt-20 p-4 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:m-auto lg:px-10 lg:pt-5">
-                <h2 class= "pt-6 pb-10 ml-3 text-4xl font-bold">Reportes</h2>
-                <div class="hidden">
-                    <img src="./img/charts.svg" alt="charts.svg" class="px-[20%]">
-                    <p class="font-bold text-2xl text-center pt-10">Operaciones insuficientes</p>
-                    <p class="text-center pt-4 pb-20">Prueba agregando más operaciones</p>
-                </div>
+        <section id="reports-section" class="hidden flex-col mx-6 my-20 p-4 radius rounded-lg shadow-xl bg-white lg:w-3/4 lg:m-auto lg:px-10 lg:pt-5 lg:my-20">
+            <h2 class= "pt-6 pb-10 ml-3 text-4xl font-bold">Reportes</h2>
+            <div class="any-reports hidden">
+                <img src="./img/charts.svg" alt="charts.svg" class="px-[20%]">
+                <p class="font-bold text-2xl text-center pt-10">Operaciones insuficientes</p>
+                <p class="text-center pt-4 pb-20">Prueba agregando más operaciones</p>
+            </div>
+            <div id="reports-table">
                 <table class="table-fixed w-full">
                     <caption class="text-bold text-2xl text-start p-4">Resumen</caption>
                     <tr class="flex justify-between text-left">
                         <th class="p-4 w-[45%]">Categoría con mayor ganancia</th>
-                        <td class="p-4"><p class="w-fit rounded-lg bg-purple-50 text-purple-500">Categorías</p></td>
-                        <td class="p-4 text-green-600">Total</td>
+                        <td class="p-4"><p id="highest-category-profits" class="w-fit rounded-lg bg-purple-50 text-purple-500 px-2 py-1">Categorías</p></td>
+                        <td id="total-hg-category-profits" class="p-4 text-green-600">Total</td>
                     </tr>
                     <tr class="flex justify-between text-left">
                         <th class="p-4 w-[45%]">Categoría con mayor gasto</th>
-                        <td class="p-4"><p class="w-fit rounded-lg bg-purple-50 text-purple-500">Categorías</p></td>
-                        <td class="p-4 text-red-600">Total</td>
+                        <td class="p-4"><p id="highest-category-expenses" class="w-fit rounded-lg bg-purple-50 text-purple-500 px-2 py-1">Categorías</p></td>
+                        <td id="total-hg-category-expenses" class="p-4 text-red-600">Total</td>
                     </tr>
                     <tr class="flex justify-between text-left">
                         <th class="p-4 w-[45%]">Categoría con mayor balance</th>
-                        <td class="p-4"><p class="w-fit rounded-lg bg-purple-50 text-purple-500">Categorías </p></td>
-                        <td class="p-4 text-bold">Total</td>
+                        <td class="p-4"><p id="highest-category-balance" class="w-fit rounded-lg bg-purple-50 text-purple-500 px-2 py-1">Categorías </p></td>
+                        <td id="total-hg-category-balance" class="p-4 text-bold">Total</td>
                     </tr>
                     <tr class="flex justify-between text-left">
                         <th class="p-4 w-[45%]">Mes con mayor ganancia</th>
