--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </nav>
     </header>
     <main>
-        <!--Succesfull alert-->
+        <!-- Succesfull alert -->
         <div id="succesfull-alert" class="hidden bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="alert">
             <strong class="font-bold">¡Increíble!</strong>
             <span class="block sm:inline">Su elección ha sido agregada satisfactoriamente.</span>
@@ -86,7 +86,7 @@
                     <div class="flex justify-between py-2 text-gray-900">
                         <div class="text-2xl">Total</div>
                         <div id="total-balance">
-                            <!--total rendered in JS-->
+                            <!--total balance rendered from the localstorage -->
                         </div>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                     <div id="any-operation" class="hidden flex items-center justify-center text-gray-600 pb-4">
                         <div class="flex-col">
                             <img class="p-4" src="./img/wallet.svg" alt="wallet__operation">
-                            <p class="mb-4 text-xl font-bold text-center ">Sin resultados</p>
+                            <p class="mb-4 text-xl font-bold text-center">Sin resultados</p>
                             <p class="text-center">Cambia los filtros o agrega operaciones</p>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                             <!--Operations rendered from the localstorage -->
                         </tbody>
                     </table>
-                <!-- </div> -->
+                </div>
             </div>
         </section>
         <!-- Card - New operation / Edit Operation -->
@@ -281,8 +281,8 @@
                         <th class="w-1/4 flex justify-center py-4">Gastos</th>
                         <th class="w-1/4 flex justify-center py-4">Balance</th>
                     </tr>
-                    <tbody id="totals-category">
-                        <!--rendered for local storage-->
+                    <tbody id="totals-all-categories">
+                        <!-- categories totals rendered from the localstorage -->
                     </tbody>
                 </table>
                 <table class="table-fixed w-full my-20">
@@ -293,12 +293,9 @@
                         <th class="w-1/4 flex justify-center py-4">Gastos</th>
                         <th class="w-1/4 flex justify-center py-4">Balance</th>
                     </tr>
-                    <tr class="flex justify-between items-center">
-                        <td class="w-1/4 flex justify-start py-4">Mes</td>
-                        <td class="w-1/4 flex justify-center py-4 text-green-600">Entrada</td>
-                        <td class="w-1/4 flex justify-center py-4 text-red-600">Salida</td>
-                        <td class="w-1/4 flex justify-center py-4">Total</td>
-                    </tr>
+                    <tbody id="totals-all-months">
+                        <!--months totals rendered from the localstorage -->
+                    </tbody>
                 </table>
             </div>
         </section> 
